--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -4,32 +4,36 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:icon="@mipmap/airport_services_gray"
+            android:title="Visa Services" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:icon="@mipmap/airport_services_gray"
+            android:title="Airport Services" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:icon="@mipmap/airport_services_gray"
+            android:title="Hotel Services" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:icon="@mipmap/meet"
+            android:title="Meet  Greet " />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Services">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:icon="@mipmap/city_sight"
+                android:title="City Sight Seeing" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:icon="@mipmap/parking"
+                android:title="Car Parking" />
+            <item
+                android:id="@+id/nav_send2"
+                android:icon="@mipmap/launge"
+                android:title="Launge Booking" />
         </menu>
     </item>
 
