--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -3,35 +3,35 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@mipmap/airport_services_gray"
+            android:id="@+id/visa_services"
+            android:icon="@mipmap/visa_gray"
             android:title="Visa Services" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@mipmap/airport_services_gray"
+            android:id="@+id/airport_services"
+            android:icon="@mipmap/airport_gray"
             android:title="Airport Services" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@mipmap/airport_services_gray"
+            android:id="@+id/hotel_services"
+            android:icon="@mipmap/hotel_gray"
             android:title="Hotel Services" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/meet_greet"
             android:icon="@mipmap/meet"
-            android:title="Meet  Greet " />
+            android:title="Meet &amp; Greet " />
     </group>
 
     <item android:title="Services">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/sight_seeing"
                 android:icon="@mipmap/city_sight"
                 android:title="City Sight Seeing" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/car_parking"
                 android:icon="@mipmap/parking"
                 android:title="Car Parking" />
             <item
-                android:id="@+id/nav_send2"
+                android:id="@+id/launge_booking"
                 android:icon="@mipmap/launge"
                 android:title="Launge Booking" />
         </menu>
