--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0277bd</color>
-    <color name="colorPrimaryDark">#01579b</color>
+    <color name="colorPrimary">#3949ab</color>
+    <color name="colorPrimaryDark">#1a237e</color>
     <color name="colorAccent">#ec407a</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
