--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3949ab</color>
-    <color name="colorPrimaryDark">#1a237e</color>
+    <color name="colorPrimary">#0288d1</color>
+    <color name="colorPrimaryDark">#1565c0</color>
     <color name="colorAccent">#ec407a</color>
 
     <color name="black_overlay">#66000000</color>
