--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,13 +6,14 @@
     tools:context="international.rst.com.rstsimplified.SplashActivity">
 
     <TextView
-        android:text="RST Simplified"
+        android:text="@string/app_name"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:textColor="#fff"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:textStyle="bold"
         android:layout_marginTop="25dp"
+        android:elevation="8dp"
         android:background="#455a64"
         android:textSize="30dp"
         android:layout_gravity="center"
