--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="international.rst.com.rstsimplified.HomeActivity"
+    tools:context="international.rst.com.rstsimplified.Activities.HomeActivity"
     tools:showIn="@layout/app_bar_home">
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
