--- a/app/src/main/res/layout/visa_card.xml
+++ b/app/src/main/res/layout/visa_card.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="350dp"
     android:layout_marginBottom="4dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="4dp"
     app:cardCornerRadius="4dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
             android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/visa_image"
+            android:src="@drawable/card_background"
+            android:scaleType="fitXY"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#c2c2c2"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/visa_image"/>
+            android:orientation="horizontal">
 
-
+        </LinearLayout>
     </LinearLayout>
+
+
 
 </android.support.v7.widget.CardView>
