--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -4,7 +4,7 @@
         android:radius="50dp"
         />
     <solid
-        android:color="#B3BABD"
+        android:color="@color/colorAccent"
         />
     <size
         android:width="130dp"
