--- a/app/src/main/res/layout/visa_card.xml
+++ b/app/src/main/res/layout/visa_card.xml
@@ -27,7 +27,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_marginRight="5dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimary"
+                android:text="Singapore Visa"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:layout_marginLeft="5dp"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight=".4"
+                android:text="Apply"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/buttonshape"/>
 
         </LinearLayout>
     </LinearLayout>
