--- a/app/src/main/res/layout/visa_card.xml
+++ b/app/src/main/res/layout/visa_card.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="350dp"
-    android:layout_marginBottom="4dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="4dp"
     app:cardCornerRadius="4dp">
@@ -32,6 +32,7 @@
             android:layout_marginRight="5dp">
             <TextView
                 android:layout_width="0dp"
+                android:id="@+id/tv_visa"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
@@ -47,8 +48,87 @@
                 android:background="@drawable/buttonshape"/>
 
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:layout_marginLeft="5dp"
+            android:text="Available Visa"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_weight=".2"
+                android:src="@mipmap/regular_visa"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:background="@color/black_overlay"
+                android:layout_weight=".01"
+                android:layout_marginRight="15dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Regular Visa/Single Entry/30-60 days"
+                android:layout_weight="1"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_weight=".2"
+                android:src="@mipmap/gold_visa"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:background="@color/black_overlay"
+                android:layout_weight=".01"
+                android:layout_marginRight="15dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Gold Visa/Single Entry/60-90 days"
+                android:layout_weight="1"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:layout_weight=".2"
+                android:src="@mipmap/express_visa"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:background="@color/black_overlay"
+                android:layout_weight=".01"
+                android:layout_marginRight="15dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Express Visa/Single Entry/3-6 months"
+                android:layout_weight="1"/>
+        </LinearLayout>
     </LinearLayout>
-
 
 
 </android.support.v7.widget.CardView>
