--- a/app/src/main/res/layout/visa_card.xml
+++ b/app/src/main/res/layout/visa_card.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="15dp"
+    android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="4dp"
     app:cardCornerRadius="4dp">
@@ -11,23 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="155dp"
             android:id="@+id/visa_image"
             android:src="@drawable/card_background"
-            android:scaleType="fitXY"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#c2c2c2"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:scaleType="fitXY" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal"
             android:layout_marginRight="5dp">
             <TextView
@@ -44,10 +39,18 @@
                 android:layout_height="30dp"
                 android:layout_weight=".4"
                 android:text="Apply"
+                android:shadowColor="#949494"
+                android:shadowRadius="5"
                 android:textColor="#FFFFFF"
                 android:background="@drawable/buttonshape"/>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#c2c2c2"
+            android:layout_marginTop="5dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,76 +61,98 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
             android:orientation="horizontal">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_weight=".2"
-                android:src="@mipmap/regular_visa"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:background="@color/black_overlay"
-                android:layout_weight=".01"
-                android:layout_marginRight="15dp"/>
-            <TextView
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Regular Visa/Single Entry/30-60 days"
-                android:layout_weight="1"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="15dp"
+                        android:layout_weight=".2"
+                        android:src="@mipmap/regular_visa"/>
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:background="@color/black_overlay"
+                        android:layout_weight=".01"
+                        android:layout_marginRight="15dp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="11dp"
+                        android:text="Regular Visa/Single Entry/30-60 days"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="2dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="15dp"
+                        android:layout_weight=".2"
+                        android:src="@mipmap/gold_visa"/>
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:background="@color/black_overlay"
+                        android:layout_weight=".01"
+                        android:layout_marginRight="15dp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="11dp"
+                        android:text="Gold Visa/Single Entry/60-90 days"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="15dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="15dp"
+                        android:layout_weight=".2"
+                        android:src="@mipmap/express_visa"/>
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:background="@color/black_overlay"
+                        android:layout_weight=".01"
+                        android:layout_marginRight="15dp"/>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="11dp"
+                        android:text="Express Visa/Single Entry/3-6 months"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+            </LinearLayout>
             <ImageView
                 android:layout_width="0dp"
-                android:layout_height="20dp"
+                android:layout_height="60dp"
                 android:layout_weight=".2"
-                android:src="@mipmap/gold_visa"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:background="@color/black_overlay"
-                android:layout_weight=".01"
-                android:layout_marginRight="15dp"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Gold Visa/Single Entry/60-90 days"
-                android:layout_weight="1"/>
+                android:id="@+id/flag_image"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/singapore_flag" />
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_weight=".2"
-                android:src="@mipmap/express_visa"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:background="@color/black_overlay"
-                android:layout_weight=".01"
-                android:layout_marginRight="15dp"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Express Visa/Single Entry/3-6 months"
-                android:layout_weight="1"/>
-        </LinearLayout>
+
     </LinearLayout>
 
 
