--- a/app/src/main/res/layout/content_service.xml
+++ b/app/src/main/res/layout/content_service.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="international.rst.com.rstsimplified.Activities.HomeActivity"
+    tools:context="international.rst.com.rstsimplified.Activities.ServicesActivity"
     tools:showIn="@layout/app_bar_home">
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
