--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -17,12 +17,12 @@
             android:layout_weight="1"
             android:layout_marginTop="2dp"
             android:layout_marginLeft="5dp"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-            android:progress="25"/>
+            android:id="@+id/progress_form"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="1 of 4"
+            android:id="@+id/tv_progress"
             android:textAlignment="center"
             android:layout_weight="0.2"/>
 
@@ -43,6 +43,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="25dp"
+            android:id="@+id/imgv_visa_type"
             android:layout_marginTop="10dp"
             android:src="@mipmap/checked_gray"
             android:layout_weight="1"/>
@@ -63,6 +64,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="25dp"
+            android:id="@+id/imgv_consult"
             android:layout_marginTop="10dp"
             android:src="@mipmap/checked_gray"
             android:layout_weight="1"/>
@@ -82,6 +84,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="25dp"
+            android:id="@+id/imgv_applicant"
             android:layout_marginTop="10dp"
             android:src="@mipmap/checked_gray"
             android:layout_weight="1"/>
@@ -101,6 +104,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="25dp"
+            android:id="@+id/imgv_docs"
             android:layout_marginTop="10dp"
             android:src="@mipmap/checked_gray"
             android:layout_weight="1"/>
@@ -120,6 +124,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="25dp"
+            android:id="@+id/imgv_payment"
             android:layout_marginTop="10dp"
             android:src="@mipmap/checked_gray"
             android:layout_weight="1"/>
