--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -230,6 +230,27 @@
                 android:hint="Expiration Date"
                 android:layout_weight="1"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Have you ever lost your passport:"
+                android:layout_marginLeft="10dp"/>
+            <RadioButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:hint="Yes"/>
+            <RadioButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="No"
+                android:layout_weight=".3"/>
+        </LinearLayout>
 
 
         <Button
@@ -239,6 +260,7 @@
             android:text="Submit"
             android:textColor="#fff"
             android:layout_marginTop="60dp"
+            android:layout_marginBottom="15dp"
             android:layout_gravity="center"/>
 
 
