--- a/app/src/main/res/layout/app_bar_activity_services.xml
+++ b/app/src/main/res/layout/app_bar_activity_services.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="international.rst.com.rstsimplified.Activities.ServicesActivity">
+    tools:context="international.rst.com.rstsimplified.Activities.ActivityServices">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -26,9 +26,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_service" />
-
-
+    <include layout="@layout/content_activity_services" />
 
 
 </android.support.design.widget.CoordinatorLayout>
