--- a/app/src/main/res/layout/content_activity_services.xml
+++ b/app/src/main/res/layout/content_activity_services.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_home"
+    android:id="@+id/content_activity_services"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="international.rst.com.rstsimplified.Activities.ServicesActivity"
-    tools:showIn="@layout/app_bar_home">
+    tools:context="international.rst.com.rstsimplified.Activities.ActivityServices"
+    tools:showIn="@layout/app_bar_activity_services">
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
