--- a/app/src/main/res/menu/activity_services_drawer.xml
+++ b/app/src/main/res/menu/activity_services_drawer.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/visa2"
+            android:id="@+id/home"
+            android:icon="@mipmap/home"
+            android:title="Home" />
+        <item
+            android:id="@+id/visa_services"
             android:icon="@mipmap/visa_gray"
             android:title="Visa Services" />
         <item
-            android:id="@+id/airport_services2"
+            android:id="@+id/airport_services"
             android:icon="@mipmap/airport_gray"
             android:title="Airport Services" />
         <item
-            android:id="@+id/hotel_services2"
+            android:id="@+id/hotel_services"
             android:icon="@mipmap/hotel_gray"
             android:title="Hotel Services" />
         <item
-            android:id="@+id/meet_greet2"
+            android:id="@+id/meet_greet"
             android:icon="@mipmap/meet"
             android:title="Meet &amp; Greet " />
     </group>
@@ -22,19 +27,17 @@
     <item android:title="Services">
         <menu>
             <item
-                android:id="@+id/sight_seeing2"
+                android:id="@+id/sight_seeing"
                 android:icon="@mipmap/city_sight"
                 android:title="City Sight Seeing" />
             <item
-                android:id="@+id/car_parking2"
+                android:id="@+id/car_parking"
                 android:icon="@mipmap/parking"
                 android:title="Car Parking" />
             <item
-                android:id="@+id/launge_booking2"
+                android:id="@+id/launge_booking"
                 android:icon="@mipmap/launge"
                 android:title="Launge Booking" />
         </menu>
     </item>
-
-
 </menu>
