--- a/app/src/main/res/layout/appicant_form.xml
+++ b/app/src/main/res/layout/appicant_form.xml
@@ -196,6 +196,17 @@
                 android:id="@+id/name_mother"/>
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:hint="Passport Number"
+            android:inputType="number"
+            android:id="@+id/edt_passport_number"/>
+    </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
